[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = ""
authors = ["Veronika <veronika-mg@bk.ru>"]
readme = "README.md"
packages = [{include = "postgres_homeworks"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
